# kamorin-anl-app

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/api/: db.py  main.py
backend/api/cruds/: login.py
backend/api/models/: user.py
backend/api/routers/: login.py  router.py
backend/api/schemas/: login.py
frontend/: Dockerfile
frontend/src/: ._.eslintrc.json  ._.gitignore  ._README.md  ._next-env.d.ts  ._next.config.js  ._postcss.config.js  ._tailwind.config.js  ._tsconfig.json  package-lock.json  package.json
frontend/src/components/: footer.tsx  header.tsx  layout.tsx  menu.tsx
frontend/src/pages/: .__app.tsx  .__document.tsx  ._index.tsx  analysis.tsx  auth.tsx  contact.tsx  index.tsx  inquiry.tsx  login.tsx  predict.tsx  release.tsx
frontend/src/pages/api/: ._hello.ts
frontend/src/styles/: ._globals.css
